# CPSim_Linux_Generalized

./: 2013-11778_design.xml  2017-14434_design.xml  2020_81520_design.xml  2min40.xml  CMakeCache.txt  CMakeCacheR.txt  CMakeLists.txt  Config  DoxyfileConfiguration  LICENSE  Makefile  README.md  cmake_install.cmake  deadline_miss.txt  debug.txt  design.xml  design_deadline.xml  example.cpp  example.h  example_case.xml  execution_oreder.txt  execution_oreder_of_ECUS.txt  job_info.txt  job_info_of_simulator.txt  schedulability.py  settings.txt  shared.h  start.sh  stop.sh  task_info.txt  testPR.txt  verification.md
CPSim_GUI/: .classpath  .project  build.properties  plugin.xml
CPSim_GUI/src/model/: configurator.ecore  configurator.ecore_diagram  hyundai.genmodel
CPSim_GUI/src/org/eclipse/cpsim/Diagram/: CAN.java  CAR.java  CustomImageProvider.java  DiagramFactory.java  DiagramPackage.java  Dual.java  ECU.java  Message.java  SWC.java  VirtualCategory.java
CPSim_GUI/src/org/eclipse/cpsim/Diagram/dialog/: CANPropertiesDialog.java  CARPropertiesDialog.java  ECUPropertiesDialog.java  PropertiesDialog.java  SWCPropertiesDialog.java
CPSim_GUI/src/org/eclipse/cpsim/Diagram/impl/: CANImpl.java  CARImpl.java  (+5 more)
CPSim_GUI/src/org/eclipse/cpsim/perspective/: PerspectiveFactory.java
CPSim_GUI/src/org/eclipse/cpsim/startup/: startclass.java
Debug/: CPSim-0.1.out
Documentation/html/: _c_a_n_interface_8cpp.html  _c_a_n_interface_8cpp.js  _c_a_n_interface_8cpp__incl.map  _c_a_n_interface_8cpp__incl.md5  _c_a_n_interface_8cpp_abfac3548b883d3c829ea2d3fef2c0fd0_cgraph.map  _c_a_n_interface_8cpp_source.html  _c_a_n_interface_8h.html  _c_a_n_interface_8h.js  _c_a_n_interface_8h__dep__incl.map  _c_a_n_interface_8h__dep__incl.md5  _c_a_n_interface_8h__incl.map  _c_a_n_interface_8h__incl.md5  _c_a_n_interface_8h_abfac3548b883d3c829ea2d3fef2c0fd0_cgraph.md5  _c_a_n_interface_8h_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c.js  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp.js  _c_make_c_x_x_compiler_id_8cpp_source.html  _e_c_u.html  _e_c_u_8cpp.html  _e_c_u_8cpp__incl.map  _e_c_u_8cpp__incl.md5  _e_c_u_8cpp_source.html  _e_c_u_8h.html  _e_c_u_8h__dep__incl.map  _e_c_u_8h__dep__incl.md5  _e_c_u_8h__incl.map  _e_c_u_8h__incl.md5  _e_c_u_8h_source.html  _e_c_u_task_8cpp.html  _e_c_u_task_8cpp__incl.map  _e_c_u_task_8cpp__incl.md5  _e_c_u_task_8cpp_source.html  _e_c_u_task_8h.html  _e_c_u_task_8h__dep__incl.map  _e_c_u_task_8h__dep__incl.md5  _e_c_u_task_8h__incl.map  _e_c_u_task_8h__incl.md5  (+308 more)
Documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_1.js  defines_2.js  defines_4.js  defines_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  (+44 more)
Engine/: CANInterface.cpp  CANInterface.h  CAN_message.cpp  CAN_message.h  CAN_receiver.cpp  CAN_receiver.h  CMakeLists.txt  CPSim.cpp  CPSim.h  CodeWrapper.cpp  CodeWrapper.h  ConnectionManager.h  DelayedData.cpp  DelayedData.h  Delayed_Data.cpp  Delayed_Data.h  DiagramData.cpp  DiagramData.h  ECU.cpp  ECU.h  ECUTask.cpp  ECUTask.h  EthernetClient.cpp  EthernetClient.h  Ethernet_receiver.cpp  Ethernet_receiver.h  Executor.cpp  Executor.h  Initializer.cpp  Initializer.h  Job.cpp  Job.h  JobNode.cpp  JobNode.h  Logger.cpp  Logger.h  Network.cpp  Network.h  OfflineGuider.cpp  OfflineGuider.h  (+32 more)
Log/: deadline_miss.txt  execution_oreder.txt  execution_oreder_of_ECUS.txt  job_info.txt  job_info_of_simulator.txt  task_info.txt
Presets/: 2014-11561_design.xml  2014-19566_design.xml  2017-10233_design.xml  2017-15782_design.xml  201713400_design.xml  2018-14000_design.xml
Report/: 2013-11778_report1.md  2014-11561_report1.md  2014-11561_report2.md  2014_11235_report1.md  2014_11235_report2.md  2017-10233_report1.md  2017-10233_report2.md  2017-14434_report1.md  2017-14434_report2.md  2017-15782_report1.md  2017-15782_report2.md  201713400_report1.md  201713400_report2.md  2018-11940_report1.md  2018-11940_report2.md  2018-14000_report1.md  2018-14000_report2.md  2020-81520_report1.md  2020-81520_report2.md  2020-90247_report1.md  2020-90247_report2.md  2020-90632_report1.md  2020_90632_report2.md  README.md  result.txt
Report/project_1/: 2014_11235_CC.cpp  2014_11235_LK.cpp  2014_11235_design.xml  2014_11235_report1.md
Simulator/: Simulator.sln  Simulator.vcxproj  test.cpp
sharedObjectFiles/: .cpp  CC.cpp  LK.cpp  LOCAL.cpp  POWER.cpp  SENSING.cpp  example.cpp  example.h  sensing.cpp  shared.h  sum.cpp
sharedObjectFiles/BRAKE/: BRAKE.cpp  BRAKE.h
sharedObjectFiles/CC/: 2014-11561_CC.cpp  2014-19566_CC.cpp  2017-10233_CC.cpp  2017-14434_CC.cpp  201713400_CC.cpp  2018-14000_CC.cpp  2020-90247_CC.cpp  2020_81520_CC.cpp  CC.cpp
sharedObjectFiles/LK/: 2013-11778_LK.cpp  2014-11561_LK.cpp  2014-19566_LK.cpp  2017-10233_LK.cpp  2017-14434_LK.cpp  2017-15782_LK.cpp  201713400_LK.cpp  2018-14000_LK.cpp  2020-90247_LK.cpp  2020_81520_LK.cpp  LK.cpp  LK.h
sharedObjectFiles/LK (NOT FINISHED)/: LK.cpp
sharedObjectFiles/LOCAL/: LOCAL.cpp
sharedObjectFiles/POWER/: POWER.cpp
sharedObjectFiles/SENSING/: SENSING.cpp
(+67 files in other folders)
